--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-email/components": "^0.0.41",
     "@react-email/render": "^1.1.2",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lenis": "^1.3.4",
