--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@react-email/render": "^1.1.2",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "instant.page": "^5.2.0",
     "lenis": "^1.3.4",
     "lucide-react": "^0.475.0",
     "next": "^15.2.0",
@@ -25,12 +27,14 @@
     "react-email": "^4.0.15",
     "resend": "^4.5.1",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@dotenvx/dotenvx": "^1.45.2",
     "@eslint/eslintrc": "^3",
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
