--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "instant.page": "^5.2.0",
     "lenis": "^1.3.4",
     "lucide-react": "^0.475.0",
